src/app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

:root {
  --background-end-rgb: 255, 255, 255;
  --background-start-rgb: 214, 219, 220;
  --foreground-rgb: 0, 0, 0;
}

@media (prefers-color-scheme: dark) {
  :root {
    --background-end-rgb: 0, 0, 0;
    --background-start-rgb: 0, 0, 0;
    --foreground-rgb: 255, 255, 255;
  }
}

html, body {
  overflow-x: hidden;
  scroll-behavior: smooth;
}

body {
  background: linear-gradient(
    to bottom,
    transparent,
    rgb(var(--background-end-rgb))
    )
    rgb(var(--background-start-rgb));
  color: rgb(var(--foreground-rgb));
  position: relative;
}
::-webkit-scrollbar {
  display: none;
}

.input-group {
  @apply flex flex-row h-auto
}

.input-group > :first-child {
  @apply rounded-full
}

.input-group > :last-child {
  @apply rounded-full p-4
}

